syntax = "proto3";

package com.demo.userservice;

option java_multiple_files = true;
option java_package = "com.demo.userservice";

service UserService {
  rpc GetUserByEmail(UserRequest) returns (UserResponse);
}

message UserRequest {
  string email = 1;
}

message UserResponse {
  string id = 1;

  string name = 2;

  string username = 3;
}

